--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -552,9 +552,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p, ul, ol, table, pre, dl {
-  margin: 0 0 20px;
+  margin: 0 0 15px;
 }
-
+h3{
+  color: #AE81FF!important;
+}
 h1, h2, h3 {
   line-height: 1.1;
 }
@@ -580,7 +582,7 @@ h3 {
 }
 
 a {
-  color: #ffcc00;
+  color: #F92672;
   font-weight: 400;
   text-decoration: none;
 }
@@ -604,16 +606,17 @@ strong {
   font-weight: normal;
 }
 
-.wrapper {
-  max-width: 650px;
+wrapper {
+ 
   margin: 0 auto;
   position: relative;
-  padding: 0 20px;
+  padding: 0 50px;
 }
 
 section img {
   max-width: 100%;
 }
+
 
 blockquote {
   border-left: 3px solid #ffcc00;
@@ -637,8 +640,9 @@ code {
 }
 
 pre {
+  color: #A6E22E;
   padding: 8px 15px;
-  background: #191919;
+  background: linear-gradient(#2a2a29, #1c1c1c);
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   -o-border-radius: 2px;
@@ -781,15 +785,14 @@ dt {
 }
 
 section {
-  max-width: 650px;
   padding: 30px 0px 50px 0px;
   margin: 20px 0;
-  margin-top: 70px;
+  margin-top: 55px;
 }
 section #title {
   border: 0;
   outline: none;
-  margin: 0 0 50px 0;
+  margin: 0 0 25px 0;
   padding: 0 0 5px 0;
 }
 section #title h1 {
