--- a/css/main.css
+++ b/css/main.css
@@ -626,3 +626,6 @@ pre code.hljs {
           margin-right: 0; } }
     .site-footer .site-signature a {
       text-decoration: underline; }
+h3{
+	color: #c63b6f;
+}
