--- a/css/main.css
+++ b/css/main.css
@@ -626,7 +626,7 @@ pre code.hljs {
           margin-right: 0; } }
     .site-footer .site-signature a {
       text-decoration: underline; }
-h3{
+h3,h5{
 	color: #c63b6f;
 }
 h5{
