--- a/css/main.css
+++ b/css/main.css
@@ -177,7 +177,8 @@ h6 {
   margin: 0 0 1rem; }
 
 h1 {
-  font-size: 2.0736em; }
+/*   font-size: 2.0736em; } */
+ font-size: 20px; } 
 
 h2 {
   font-size: 1.728em; }
